--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -17,6 +17,15 @@
           {% if site.github.is_project_page %}
             <a id="forkme_banner" href="{{ site.github.repository_url }}">View on GitHub</a>
           {% endif %}
+          <nav>
+            <ul>
+              {% for item in site.data.navi %}
+                <li>
+                  <a href="{{ item.link | relative_url }}">{{ item.name }}</a>
+                </li>
+              {% endfor %}
+            </ul>
+          </nav>
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
