post, category, tag 有効化

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -20,7 +20,7 @@
           <nav>
             <ul>
               {% for item in site.data.navi %}
-                <li>
+                <li class="menu">
                   <a href="{{ item.link | relative_url }}">{{ item.name }}</a>
                 </li>
               {% endfor %}
@@ -29,8 +29,19 @@
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
-
-          {% if site.show_downloads %}
+          <nav>
+            <ul>
+                <li class="icon">
+                  <a href="https://github.com/omoikanedo"><i class="fab fa-github" aria-hidden="true"></i></a>
+                </li>
+                <li class="icon">
+                  <a href="https://twitter.com/omoikanedo"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                </li>
+                <li class="icon">
+                  <a href="https://mstdn.jp/@omoikanedo"><i class="fab fa-mastodon" aria-hidden="true"></i></a>
+                </li>
+              </ul>
+          </nav>          {% if site.show_downloads %}
             <section id="downloads">
               <a class="zip_download_link" href="{{ site.github.zip_url }}">Download this project as a .zip file</a>
               <a class="tar_download_link" href="{{ site.github.tar_url }}">Download this project as a tar.gz file</a>
