--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -2,6 +2,27 @@
 <html lang="{{ site.lang | default: "en-US" }}">
 
   <head>
+    {% assign twitter_description = page.description | default: page.excerpt | default: site.description %}
+    {% if twitter_description %}
+      {% assign twitter_description = twitter_description | markdownify | strip_html | strip_newlines | escape_once %}
+    {% endif %}
+    {% if page.title %}
+      {% assign twitter_title = page.title | append: " - " | append: site.title %}
+    {% else %}
+      {% assign twitter_title = site.title %}
+    {% endif %}
+    {% if page.image %}
+      {% assign twitter_image = site.baseurl | append: page.image %}
+      {% assign twitter_card = "summary_large_image" %}
+    {% else %}
+      {% assign twitter_image = site.baseurl | append: "/favicon.png" %}
+      {% assign twitter_card = "summary" %}
+    {% endif %}
+    <meta name="twitter:card" content="{{ twitter_card }}">
+    <meta name="twitter:title" content="{{ twitter_title }}">
+    <meta name="twitter:url" content="{{ site.baseurl }}{{ page.url }}">
+    <meta name="twitter:description" content="{{ twitter_description }}">
+    <meta name="twitter:image:src" content="{{ twitter_image }}">
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
