--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -23,6 +23,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,maximum-scale=2">
     <meta name="twitter:card" content="{{ twitter_card }}">
+    <meta name="twitter:site" content="@omoikanedo" />
     <meta name="twitter:title" content="{{ twitter_title }}">
     <meta name="twitter:url" content="{{ site.baseurl }}{{ page.url }}">
     <meta name="twitter:description" content="{{ twitter_description }}">
