--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
     {% assign twitter_image = site.baseurl | append: page.image %}
     {% assign twitter_card = "summary_large_image" %}
   {% else %}
-    {% assign twitter_image = site.baseurl | append: "/img/icon.png" %}
+    {% assign twitter_image = site.baseurl | append: "https://omoikanedo.github.io/img/icon.png" %}
     {% assign twitter_card = "summary" %}
   {% endif %}
 
