--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -134,6 +134,32 @@ div.alert.danger {
   color: #a94442;
 }
 
+// badges
+span.badges {
+  border-radius: 3px;
+  padding: 0 4px;
+}
+
+span.badges.success {
+  background-color: #dff0d8;
+  color: #3c763d;
+}
+
+span.badges.info {
+  background-color: #d9edf7;
+  color: #31708f;
+}
+
+span.badges.warn {
+  background-color: #fcf8e3;
+  color: #8a6d3b;
+}
+
+span.badges.danger {
+  background-color: #f2dede;
+  color: #a94442;
+}
+
 
 // rougify style monokai.sublime //
 .highlight table td { padding: 5px; }
