--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -137,7 +137,7 @@ div.alert.danger {
 // badges
 span.badges {
   border-radius: 3px;
-  padding: 0 4px;
+  padding: 2px 4px;
 }
 
 span.badges.success {
