--- a/layouts/partials/twitter_cards.html
+++ b/layouts/partials/twitter_cards.html
@@ -17,7 +17,7 @@
 {{- end -}}
 {{- end -}}
 {{- end }}
-<meta name="twitter:title" content="{{ .Title }}"/>
+<meta name="twitter:title" content="{{ .Title }}&nbsp;-&nbsp;{{ .Site.Title }}"/>
 <meta name="twitter:description" content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ end }}{{ end }}{{ end -}}"/>
 {{ with .Site.Social.twitter -}}
 <meta name="twitter:site" content="@{{ . }}"/>
