--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -254,7 +254,7 @@ pre,
 code,
 kbd,
 samp {
-	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+	font-family: SFMono-Regular, Menlo, Monaco, "Liberation Mono", monospace;
 	font-size: inherit;
 }
 
