--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -254,7 +254,7 @@ pre,
 code,
 kbd,
 samp {
-	font-family: SFMono-Regular, Menlo, Monaco, "Liberation Mono", monospace;
+	font-family: SFMono-Regular, Menlo, Monaco, 'Liberation Mono', monospace;
 	font-size: inherit;
 }
 
@@ -651,7 +651,6 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 .post__thumbnail img {
 	width: 100%;
-	max-width: 200px;
 }
 
 .content a,
@@ -796,20 +795,24 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 	list-style: none;
 }
 
-.toc__menu ul ul ul a {
+.toc__menu li li a {
 	padding-left: 25px;
 }
 
-.toc__menu ul ul ul ul a {
+.toc__menu li li li a {
 	padding-left: 45px;
 }
 
-.toc__menu ul ul ul ul ul a {
+.toc__menu li li li li a {
 	padding-left: 65px;
 }
 
-.toc__menu ul ul ul ul ul ul a {
+.toc__menu li li li li li a {
 	padding-left: 85px;
+}
+
+.toc__menu li li li li li li a {
+	padding-left: 105px;
 }
 
 .toc__menu li {
@@ -883,7 +886,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 .list__thumbnail img {
 	width: 100%;
-	max-width: 200px;
+	max-width: 235px;
 }
 
 .list__footer-readmore {
